test/libyul/yulSyntaxTests/bin_string_literal_5.yul
{
    let name := bin"1111111100000"
}
// ====
// dialect: evm
// ----
// ParserError 1465: (18-30): Illegal token: Expected numbers of bits multiple of 8.
